--- a/style/style.css
+++ b/style/style.css
@@ -2,33 +2,19 @@
     margin: 0;
     padding: 0;
 }
-.post1{
+.post{
     border: 2px solid black;
-    margin: 100px;
+    margin: 40px;
+    padding: 40px;
+    position: relative; 
+}
+.post h2{
     margin-bottom: 20px;
-    padding: 50px;
-    padding-right: 800px;
-    position: relative; 
 }
-.post2{
-    border: 2px solid black;
-    margin: 100px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    padding: 50px;
-    padding-right: 800px;
-    position: relative; 
+.post text{
+    max-width: 700px;
 }
-.post3{
-    border: 2px solid black;
-    margin: 100px;
-    margin-top: 20px;
-    margin-bottom: 200px;
-    padding: 50px;
-    padding-right: 800px;
-    position: relative; 
-}
-.post1 button, .post2 button, .post3 button{
+.post button{
     font-size:20px;
     border: 1px solid black;
     padding: 5px 10px 5px 10px;
@@ -37,8 +23,9 @@
     bottom: 100%;
     left: 100%;
     transform: translate(-50%, 50%);
+    cursor: pointer;
 }
-.post1 .marker, .post2 .marker, .post3 .marker{
+.post .marker{
     border: 1px solid black;
     padding: 10px 150px 10px 10px;
     border-radius: 20px;
@@ -52,7 +39,6 @@ nav{
     padding: 0;
     position: sticky;
     width: 2,5%;
-    position: absolute;
     bottom: -150px; 
     right: 100px; 
     z-index: 10;
